# github_events_consumer

./: .env.example  .gitignore  .pylintrc  README.md  docker-compose.main.yml  docker-compose.mongo.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: docker-ci.yml
api/: Dockerfile  config.py  main.py  pyproject.toml
api/src/routers/: __init__.py  api_endpoints.py  templates.py
api/static/css/: main.css
api/static/js/: pagination.js
api/test/: base_test.py  conftest.py  lib_test.py  test_api_endpoints.py
api/test/fixtures/: test_live_expected_results.json
celery_app/: Dockerfile  config.py  pyproject.toml  run.sh
celery_app/src/harvester/: asyncio_operations.py  errors.py  utils.py
celery_app/src/pyspark/: jobs.py  mongo_connectors.py  runner.py
celery_app/src/tasks/: cleaning_task.py  harvester_task.py  pyspark_task.py  test_task.py
celery_app/test/: conftest.py
celery_app/test/harvester/: test_harvester.py
celery_app/test/pyspark/: base_test.py  test_mongo.py  test_spark.py
celery_app/test/pyspark/fixtures/: dataframe_fixture.py
conf/mongo/: mongod.conf
conf/nginx/: monitor_docker.conf.example  template_docker.conf
db/: mongo.py
