[tool.poetry]
name = "github_events_consumer"
version = "0.3.0"
description = "dev setup"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
flake8 = "==4.0.1"
isort = "==5.10.1"
pre-commit = "==2.19.0"
pylint = "==2.13.8"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
