[tool.poetry]
name = "github_events_consumer"
version = "0.2.0"
description = "FastAPI containers for stats and dashboards (prod and test)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "==0.75.2"
Jinja2 = "==3.1.2"
pandas = "==1.4.2"
plotly = "==5.9.0"
pydantic = "==1.9.0"
pymongo = "==4.1.1"
pytest = "==7.1.2"
typing = "==3.7.4.3"
uvicorn = "==0.17.6"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "/opt/api", ]
filterwarnings = [
    "error"
]
