[tool.poetry]
name = "github_events_consumer"
version = "0.3.0"
description = "Celery/Beat container embedded with PySpark and Harvester applications (prod and test)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
celery = "==5.2.7"
python = ">=3.9,<3.10"
pandas = "==1.4.2"
pydantic = "==1.9.0"
pymongo = "==4.1.1"
pyspark = "==3.2.1"
pytest = "==7.1.2"
typing = "==3.7.4.3"
asyncio = "==3.4.3"
aiohttp = "==3.8.1"
requests = "==2.27.1"
pytest-asyncio = "==0.18.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "/opt/celery_app", ]
asyncio_mode = "strict"
filterwarnings = [
    "error",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
